[package]
name = "almond-client-rs"
version = "0.1.0"
authors = ["Giovanni Campagna <gcampagn@cs.stanford.edu>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "^1.2.0", features = ["full"] }
tokio-tungstenite = "^0.13.0"
rustyline = "^7.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.0"
